add article post route
