# docs/swagger.json
@@ -14,6 +14,9 @@
         "/articles": {
             "get": {
                 "description": "gets accounts",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -38,11 +41,52 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "creates article",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "articles"
+                ],
+                "summary": "Create article",
+                "parameters": [
+                    {
+                        "description": "Add Article",
+                        "name": "article",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/article.addArticle"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/articles/{id}": {
             "get": {
                 "description": "gets an article by ID",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -106,6 +150,23 @@
                 "updated_at": {
                     "type": "string",
                     "example": "1985-04-12T23:20:50.52Z"
+                }
+            }
+        },
+        "article.addArticle": {
+            "type": "object",
+            "required": [
+                "min_amount",
+                "name"
+            ],
+            "properties": {
+                "min_amount": {
+                    "type": "integer",
+                    "example": 1
+                },
+                "name": {
+                    "type": "string",
+                    "example": "kebab"
                 }
             }
         }
